--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "theme_color": "#fff",
     "background_color": "#181920",
-    "display": "fullscreen",
+    "display": "standalone",
     "scope": "/",
     "start_url": "/",
     "name": "StrongPass",
