--- a/manifest.json
+++ b/manifest.json
@@ -3,29 +3,30 @@
     "background_color": "#181920",
     "display": "standalone",
     "scope": "/",
-    "start_url": "/saow.github.io/StrongPass/",
+    "start_url": "saow.github.io/StrongPass/",
     "name": "StrongPass",
     "short_name": "StrongPass",
     "icons": [
-        {
-            "src": "/assets/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/assets/icon-192x192.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        },
-        {
-            "src": "/assets/icon-192x192.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "/assets/icon-192x192.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
+      {
+        "src": "/assets/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/icon-192x192.png",
+        "sizes": "256x256",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/icon-192x192.png",
+        "sizes": "384x384",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/icon-192x192.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      }
     ]
-}
+  }
+  
