--- a/manifest.json
+++ b/manifest.json
@@ -8,34 +8,34 @@
     "short_name": "StrongPass",
     "icons": [
       {
-        "src": "/assets/icon-192x192.png",
+        "src": "assets/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "/assets/icon-256x256.png",
+        "src": "assets/icon-256x256.png",
         "sizes": "256x256",
         "type": "image/png"
       },
       {
-        "src": "/assets/icon-384x384.png",
+        "src": "assets/icon-384x384.png",
         "sizes": "384x384",
         "type": "image/png"
       },
       {
-        "src": "/assets/icon-512x512.png",
+        "src": "assets/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
     ],
     "screenshots": [
       {
-        "src": "/assets/screenshot1.png",
+        "src": "assets/screenshot1.png",
         "sizes": "1080x1920",
         "type": "image/png"
       },
         {
-            "src": "/assets/screenshot2.png",
+            "src": "assets/screenshot2.png",
             "sizes": "1080x1920",
             "form_factor": "wide",
             "type": "image/png"
